// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb RadioInput__StyledFormField-sc-1brmdkl-0 fCatfa"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 erxZes"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hBRKYQ StyledRadioButton-sc-g1f6ld-5 glMvgI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 ivOiNH"
              disabled=""
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bYXdSi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 idFGA-D"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fJKIiz"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb RadioInput__StyledFormField-sc-1brmdkl-0 fCatfa"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 lctYXh"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hBRKYQ StyledRadioButton-sc-g1f6ld-5 glMvgI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bYXdSi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 idFGA-D"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fJKIiz"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb RadioInput__StyledFormField-sc-1brmdkl-0 fCatfa"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
        for="some-input"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 lctYXh"
          for="some-input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hBRKYQ StyledRadioButton-sc-g1f6ld-5 glMvgI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
              id="some-input"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bYXdSi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 idFGA-D"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fJKIiz"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb RadioInput__StyledFormField-sc-1brmdkl-0 fCatfa"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 hhNxug"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 lctYXh"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hBRKYQ StyledRadioButton-sc-g1f6ld-5 glMvgI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bYXdSi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 idFGA-D"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fJKIiz"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb RadioInput__StyledFormField-sc-1brmdkl-0 fCatfa"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 lctYXh"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hBRKYQ StyledRadioButton-sc-g1f6ld-5 glMvgI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bYXdSi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 idFGA-D"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fJKIiz"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 cbXpay"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb RadioInput__StyledFormField-sc-1brmdkl-0 fCatfa"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 clUCbD FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 lctYXh"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hBRKYQ StyledRadioButton-sc-g1f6ld-5 glMvgI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jTGzxb"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bYXdSi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 idFGA-D"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fJKIiz"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bWzGTv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
